[package]
name = "dottler"
version = "0.1.0"
authors = ["Luke Leppan"]
edition = "2021"
rust-version = "1.74"
description = "Dottle you dotfiles"
readme = "README.md"
repository = "https://github.com/lukeleppan/dottler"
license = "Apache-2.0"
license-file = "LICENSE"
keywords = ["dotfiles"]
categories = ["command-line-utilities"]

[dependencies]
