[package]
name = "dottler"
authors = ["Luke Leppan"]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Dottle you dotfiles"
readme = "README.md"
repository = "https://github.com/lukeleppan/dottler"
license = "Apache-2.0"
keywords = ["dotfiles"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive", "help"] }
exitcode = "1.1.2"
git2 = "0.18.1"
url = { version = "2.5.0", features = ["serde"] }
walkdir = "2.4.0"
